Aggiunta alcune cardinalità mancanti e errori generici

--- a/src/progettazioneConcettuale/analisi_relazioni.tex
+++ b/src/progettazioneConcettuale/analisi_relazioni.tex
@@ -1,14 +1,4 @@
 \begin{itemize}
-	\item \underline{Vigneto - Vigna}: \textbf{Coltivata}
-	
-	\begin{itemize}
-		\item Nel vigneto sono presenti uno o più vigne (1,N)
-		\item Una vigna è presente in un solo vigneto (1,1)
-	\end{itemize}
-	
-\end{itemize}
-
-\begin{itemize}
 	\item \underline{Vigneto - TipoUva}: \textbf{Proviene}
 	
 	\begin{itemize}
@@ -147,6 +137,11 @@
 	\end{itemize}
 	
 \end{itemize}
+
+\begin{verse}
+	*\emph{Nella relazione è presente l'attributo \textbf{Data} perchè un evento può essere ospitato in un negozio in una sola determinata data.}
+\end{verse}
+
 
 \begin{itemize}
 	\item \underline{Evento - Vino}: \textbf{TemaVino}
