--- a/src/progettazioneConcettuale/analisi_entita.tex
+++ b/src/progettazioneConcettuale/analisi_entita.tex
@@ -1,15 +1,15 @@
-Gli attributi contraddistinti dal carattere tipografico \emph{grassetto} sono (o fanno parte) della chiave della relativa tabella. \\
-Il simbolo $\gets$ identifica una generalizzazione completa, cioè la \textbf{prima entita'} è una generalizzazione completa delle entita' seguenti.
-Il simbolo $\Leftarrow$ identifica una generalizzazione parziale, cioè la \textbf{prima entita'} è una generalizzazione parziale delle identità seguenti.
+Gli attributi contraddistinti dal carattere tipografico \textbf{\emph{grassetto}} sono (o fanno parte) della chiave primaria della relativa tabella. \\
+Il simbolo $\gets$ identifica una generalizzazione completa, cioè la \textbf{prima entita'} è una generalizzazione \emph{completa} delle entita' seguenti.
+Il simbolo $\Leftarrow$ invece, identifica una generalizzazione parziale, cioè la \textbf{prima entita'} è una generalizzazione \emph{parziale} delle identità seguenti.
 
 \begin{verse}
-	\textbf{ProduzioneVino} $\gets$ \emph{IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura} le quali sono tutte prive di attributi.
+	Le entita' \emph{Fornitore, ProduzioneVino, Imbottigliamento, NegozioInterno, MagBianco, MagRosso, MagRosato, MagSpumante, AzManutenzione, IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura, FornitoreTappi, FornitureUva, FornitoreBottiglie} sono prive di attributi.
 \end{verse}
 \begin{verse}
-	\textbf{Fornitore} $\gets$ \emph{FornitoreTappi, FornitureUva, FornitoreBottiglie} le quali sono tutte prive di attributi
+	\textbf{ProduzioneVino} $\gets$ \emph{IngrMateriePrime, Pigiatura, Fermentazione, Vinificazione, Svinatura}.
 \end{verse}
 \begin{verse}
-	Le entita' \emph{Fornitore, ProduzioneVino, Imbottigliamento, NegozioInterno, MagBianco, MagRosso, MagRosato, MagSpumante, AzManutenzione} sono prive di attributi.
+	\textbf{Fornitore} $\gets$ \emph{FornitoreTappi, FornitureUva, FornitoreBottiglie}.
 \end{verse}
 
 \vspace{0.5cm}
