Low budget fixes

--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,8 @@
 \usepackage[margin=0.8in, includefoot]{geometry}
 \usepackage{longtable}
 \usepackage{graphicx}
+\usepackage{amssymb}
+
 
 \newcolumntype{P}[1]{>{\centering\arraybackslash}p{#1}}
 %\titleformat{\chapter}[display]{\bfseries}{}{-30pt}{\Huge}
