--- a/src/progettazioneConcettuale/_main.tex
+++ b/src/progettazioneConcettuale/_main.tex
@@ -4,5 +4,5 @@
 \subsection{Analisi delle relazioni e delle cardinalità}
     \input{src/progettazioneConcettuale/analisi_relazioni.tex}
 
-\subsection{Diagramma ER}
+%\subsection{Diagramma ER}%
     \input{src/progettazioneConcettuale/diagramma_er.tex}
