--- a/src/progettazioneConcettuale/diagramma_er.tex
+++ b/src/progettazioneConcettuale/diagramma_er.tex
@@ -1,3 +1,4 @@
 \begin{figure}
-    \includegraphics[width=25cm,keepaspectratio,angle=90]{src/progettazioneConcettuale/assests/cantina_ER.png}
+    \subsection{Diagramma ER}
+    \centerline{\includegraphics[width=25cm,keepaspectratio,angle=90]{src/progettazioneConcettuale/assests/cantina_ER.png}}
 \end{figure}
