--- a/src/progettazioneLogica/operazioni_tipiche.tex
+++ b/src/progettazioneLogica/operazioni_tipiche.tex
@@ -3,9 +3,9 @@
 		\toprule
 		\rowcolor[rgb]{.929, .929, .929} Operazione & Frequenza \\
 		\midrule
-		Ricezione nuovo ordine & 50 volte al giorno\\
+		Ricezione nuovo ordine & $\backsim$ 50 volte al giorno\\
 		\midrule
-		Acquisto materie prime & 100 volte all'anno\\
+		Acquisto materie prime & $\backsim$ 100 volte all'anno\\
 		\midrule
 		Manutenzione macchinari & 200 volte all'anno\\
 		\midrule
@@ -13,9 +13,9 @@
 		\midrule
 		Assunzione dipendente & 10 volte all'anno\\
 		\midrule
-		Inserimento turno & 400 volte al giorno\\
+		Inserimento turno & $\backsim$ 400 volte al giorno\\
 		\midrule
-		Inserimento nuovo acquirente & 40 volte al giorno\\
+		Inserimento nuovo acquirente & $\backsim$ 40 volte al giorno\\
 		\midrule
 		Resoconto guadagno & 1 volta a settimana\\
 		\bottomrule
