--- a/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
+++ b/src/progettazioneLogica/eliminazioni_generalizzazioni.tex
@@ -1,15 +1,21 @@
 Lo schema concenttuale presenta molte generalizzazioni. Si procede all'analisi di queste ultime per permettere la traduzione verso lo schema logico.\\
 
+
+\begin{flushleft}
+	\textbf{\large{MateriaPrima}}\\
+	L'entità \emph{MateriaPrima} è una generalizzazione completa delle entità \emph{Uva, Bottiglia, Tappo}. Queste ultime presentano un carico di attributi e di relazioni maggiore rispetto a \emph{MateriaPrima}. Si è deciso di eliminare la generalizzazione e di creare una relazione specifica per \emph{Uva, Bottiglia, Tappo} con l'entità \emph{Fornitore}.
+\end{flushleft}
+
 \begin{flushleft}
 	\textbf{\large{Fornitore}}\\
-	L'entità \emph{Fornitore} non ha attributi ed è generalizzata dall'entità \emph{Azienda}. A sua volta \emph{Fornitore} è una generalizzazione di \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. Si è deciso di mantenere l'entità \emph{Fornitore} e di eliminare \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. E' quindi stato aggiunto l'attributo \textbf{Tipologia} per identificare il tipo di fornitura di ogni fornitore.
+	L'entità \emph{Fornitore} non ha attributi ed è generalizzata dall'entità \emph{Azienda}. A sua volta \emph{Fornitore} è una generalizzazione di \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. Si è deciso di mantenere l'entità \emph{Fornitore} (avendo relazioni specifiche) e di eliminare \emph{FornitoreUva, FornitoreTappi, FornitoreBottiglie}. E' quindi stato aggiunto l'attributo \textbf{Tipologia} per identificare il tipo di fornitura di ogni fornitore.
 \end{flushleft}
 
 
 \begin{flushleft}
 	\textbf{\large{Acquirente}}\\
 	L'entità \emph{Acquirente} presenta un attributo ed una relazione. A loro volta anche le entità figlie \emph{Azienda e Privato} hanno attributi significativi. Per ristrutturare questa generalizzazione si è deciso di creare due relazioni differenti. La prima si chiama \textbf{IsAzienda} dove la cardinalità da \emph{Azienda} ad \emph{Acquirente} è $(0,1)$ poiche' un'azienda puo' non essere un acquirente, mentre da \emph{Acquirente} ad \emph{Azienda} è $(0,1)$ poiche' non tutti gli acquirenti sono un'azienda.
-	La seconda relazione si chiama \textbf{IsPrivato} ed e' stata creata utilizzando lo stesso ragionamento di IsAzienda, ovvero la cardinalita' da \emph{Acquirente} a \emph{Privato} e' $(0,1)$ poiche' non tutti gli acquirenti sono privati, mentre da \emph{Privato} ad \emph{Acquirente} è $(1,1)$ poiche' un privato e' sempre un acquirente. Le entità \emph{Azienda} e \emph{Privato} mantengono gli attributi visti in precedenza, in piu' ad \emph{Acquirente} verra' aggiunto l'attributo \emph{NumAcquirente} che sara' chiave referenziale ad \emph{Acquirente}. Si e' deciso di aggiungere questo attributo consapevoli dell'eventualita' che quest'ultimo possa essere \textbf{NULL} visto che il numero di aziende che non sono acquirenti (i fornitori) e' minore di quelle che lo sono.
+	La seconda relazione si chiama \textbf{IsPrivato} ed e' stata creata utilizzando lo stesso ragionamento di IsAzienda, ovvero la cardinalita' da \emph{Acquirente} a \emph{Privato} e' $(0,1)$ poiche' non tutti gli acquirenti sono privati, mentre da \emph{Privato} ad \emph{Acquirente} è $(1,1)$ poiche' un privato e' sempre un acquirente. Le entità \emph{Azienda} e \emph{Privato} mantengono gli attributi visti in precedenza, in piu' ad \emph{Acquirente} verra' aggiunto l'attributo \emph{NumAcquirente} che sara' chiave referenziale ad \emph{Acquirente}. Si e' deciso di aggiungere questo attributo consapevoli dell'eventualita' che quest'ultimo possa essere \textbf{NULL} visto che il numero di aziende che non sono acquirenti (es. fornitori) e' minore di quelle che lo sono.
 \end{flushleft}
 
 \begin{flushleft}
