--- a/src/progettazioneLogica/identificatori_principali.tex
+++ b/src/progettazioneLogica/identificatori_principali.tex
@@ -1,10 +1,10 @@
 Oltre agli identificatori visti nella sezione~\ref{analisi_entita}, sono stati aggiunti nuovi identificatori primari:
 
 \begin{itemize}
-	\item Si è deciso di aggiungere l'attributo \textbf{ID} (che funge da chiave primaria e referenziale con l'attributo \textbf{ID} di \emph{Azienda}) all' entità \emph{Fornitore};
-	\item All'entità \emph{Privato} è stato aggiunto l'attributo \textbf{ID} che ha il ruolo di chiave primaria e di chiave referenziale con l'attributo \textbf{ID} di \emph{Acquirente};
-	\item L'entità \emph{NegozioInterno} possiede un attributo \textbf{ID} che e' chiave primaria e chiave referenziale con l'attributo \textbf{ID} di \emph{Azienda};
+	\item Si è deciso di aggiungere l'attributo \textbf{ID} (che funge da chiave primaria e esterna con l'attributo \textbf{ID} di \emph{Azienda}) all' entità \emph{Fornitore};
+	\item All'entità \emph{Privato} è stato aggiunto l'attributo \textbf{ID} che ha il ruolo di chiave primaria e di chiave esterna con l'attributo \textbf{ID} di \emph{Acquirente};
+	\item L'entità \emph{NegozioInterno} possiede un attributo \textbf{ID} che e' chiave primaria e chiave esterna con l'attributo \textbf{ID} di \emph{Azienda};
 	\item L'entità \emph{Informazione} appena aggiunta ha come chiave primaria l'attributo \textbf{ID}
-	\item L'entità \emph{Indirizzo} appena aggiunta ha come chiave primaria l'attributo \textbf{ID} che e' anche chiave referenziale con l'attributo \textbf{ID} di \emph{Informazione o Vigneto};
+	\item L'entità \emph{Indirizzo} appena aggiunta ha come chiave primaria l'attributo \textbf{ID} che e' anche chiave esterna con l'attributo \textbf{ID} di \emph{Informazione o Vigneto};
 	\item E' stato aggiunto l'attributo \textbf{ID}, che e' chiave primaria, a \emph{Uva, Tappo, Bottiglia, Evento} per rendere più semplice le relazioni con queste entità.
 \end{itemize}
