--- a/src/progettazioneLogica/schema_relazionale.tex
+++ b/src/progettazioneLogica/schema_relazionale.tex
@@ -28,17 +28,17 @@
 \begin{verse}
 	Bottiglie.Fornitore $\to$ Fornitori.Id
 \end{verse}
-\textbf{FornisceUva} (\underline{Uva, DataAcquisto}, Prezzo, Quantita)
+\textbf{FornituraUva} (\underline{Uva, DataAcquisto}, Prezzo, Quantita)
 \begin{verse}
-	FornisceUva.Uva $\to$ Uva.Id
+	FornituraUva.Uva $\to$ Uva.Id
 \end{verse}
-\textbf{FornisceTappo} (\underline{Tappo, DataAcquisto}, Prezzo, Quantita)
+\textbf{FornituraTappo} (\underline{Tappo, DataAcquisto}, Prezzo, Quantita)
 \begin{verse}
-	FornisceTappi.Tappo $\to$ Tappi.Id
+	FornituraTappo.Tappo $\to$ Tappi.Id
 \end{verse} 
-\textbf{FornisceBottiglia} (\underline{Bottiglia, DataAcquisto}, Prezzo, Quantita)
+\textbf{FornituraBottiglia} (\underline{Bottiglia, DataAcquisto}, Prezzo, Quantita)
 \begin{verse}
-	FornisceBottiglia.Bottiglia $\to$ Bottiglie.Id
+	FornituraBottiglia.Bottiglia $\to$ Bottiglie.Id
 \end{verse} 
 \textbf{LineeProduttive} (\underline{Id}, Nome, Direttore)
 \begin{verse}
